# Hasher

./: Cargo.toml  LICENSE  PKGBUILD  README.md
src/: constants.rs  main.rs
src/app/: hasher.rs  mod.rs  state.rs
src/hash/: hasher.rs
