[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"

tracing = "0.1.40"
[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
[dev-dependencies]
rstest = "0.18.2"
