[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
hex-literal = "0.4.1"
md5 = "0.7.0"
md6 = "2.0.3"
sha1 = "0.10.6"

tracing = "0.1.40"
[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]
[dev-dependencies]
rstest = "0.18.2"
[[bin]]
name = "hasher"
path = "src/main.rs"
